spade-tests/src/snapshots/spade_tests__const_generics__generic_int_in.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<T>(x: T)
    where T: X
{
    test(false)
}


error: Trait bound not satisfied. bool does not implement X
  ┌─ testinput:5:10
  │
3 │     where T: X
  │              - because of trait bound specified here
4 │ {
5 │     test(false)
  │          ^^^^^ bool does not implement X
