spade-tests/src/snapshots/spade_tests__const_generics__generic_int_in_where_clause_trait_bound_lhs.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<#uint N>()
    where N: X
{}


error: Expected `N` to be a generic type
  ┌─ testinput:3:11
  │
2 │ fn test<#uint N>()
  │               - N is a generic int
3 │     where N: X
  │           ^ Generic int in trait bound
